# CloudNativeDev

./: .env.example  README.md  docker-compose.yml
backend/: .env.example  README.md  docker-compose.yaml  run_all.sh  schema_init.sql
backend/asset-service/: .env  .env.example  Dockerfile  README.md  app.py  equipment_routes.py  gen_token.py  models.py  pyproject.toml  requirements.txt  schemas.py
backend/maintenance/: .env.example  README.md  app.py  dockerfile  pyproject.toml
backend/maintenance-module/: .env.example
backend/maintenance/controllers/: maintenance.py
backend/maintenance/models/: __init__.py  maintenance.py
backend/maintenance/routes/: __init__.py  maintenance.py
backend/maintenance/utils/: enum.py
backend/user/: .env.example  README.md  app.py  dockerfile  pyproject.toml
backend/user/controlers/: department.py  user.py
backend/user/controllers/: department.py  user.py
backend/user/models/: __init__.py  department.py  user.py
backend/user/routes/: __init__.py  department.py  root.py  user.py
backend/user/utils/: utils.py
frontend/: apiDesign.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/components/: AppLayout.vue
frontend/src/components/common/: AssetDetailModal.vue  ConfirmModal.vue  Pagination.vue  StatusBadge.vue  ToastNotification.vue
frontend/src/components/layout/: AppHeader.vue  AppSidebar.vue
frontend/src/composables/: useI18n.js
frontend/src/locales/: en.js  zh-TW.js
frontend/src/router/: index.js
frontend/src/stores/: assets.js  auth.js  notifications.js  requests.js
frontend/src/views/: DashboardView.vue  LoginView.vue
frontend/src/views/assets/: AssetDetailView.vue  AssetFormView.vue  AssetListView.vue
(+4 files in other folders)
