[project]
name = "user"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.7",
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=25.3.0",
    "marshmallow>=4.3.0",
    "passlib>=1.7.4",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
]
